bump java version